Update and rename FBXLoader.html to index.html

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 <body onload="draw();">
 
 </body>
-<script src="js/three.js"></script>
-<script src="js/FBXLoader.js"></script>
-<script src="js/OrbitControls.js"></script>
-<script src="js/stats.min.js"></script>
+<script src="three.js"></script>
+<script src="FBXLoader.js"></script>
+<script src="OrbitControls.js"></script>
+<script src="stats.min.js"></script>
 <script src="inflate.min.js"></script>
 <script>
     var renderer, camera, scene,  stats, ambientLight, directionalLight, control;
