--- a/index.html
+++ b/index.html
@@ -1,146 +1,112 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>FBX模型加载</title>
-    <style type="text/css">
-        html, body {
-            margin: 0;
-            height: 100%;
-        }
-
-        canvas {
-            display: block;
-        }
-
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="three.js"></script>
+    <script src="FBXLoader.js"></script>
+    <script src="OrbitControls.js"></script>
+    <script src="stats.min.js"></script>
+    <script src="inflate.min.js"></script>
+    <title>FBX文件模型</title>
 </head>
-<body onload="draw();">
+<body onload="initThree();">
+<div id="canvas-frame"></div>
 
 </body>
-<script src="three.js"></script>
-<script src="FBXLoader.js"></script>
-<script src="OrbitControls.js"></script>
-<script src="stats.min.js"></script>
-<script src="inflate.min.js"></script>
 <script>
-    var renderer, camera, scene,  stats, ambientLight, directionalLight, control;
 
-    function initRender() {
-        renderer = new THREE.WebGLRenderer({antialias: true});
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        //告诉渲染器需要阴影效果
-        renderer.shadowMap.enabled = true;
-        renderer.shadowMap.type = THREE.PCFSoftShadowMap; // 默认的是，没有设置的这个清晰 THREE.PCFShadowMap
-        document.body.appendChild(renderer.domElement);
+    var scene,camera,renderer,mixer;
+    var WIDTH,HEIGHT,controls;
+    var clock = new THREE.Clock();
+    //  创建渲染器
+    function initRenderer(){
+        WIDTH = window.innerWidth;
+        HEIGHT = window.innerHeight;
+        renderer = new THREE.WebGLRenderer({animation:true});
+        renderer.setSize(WIDTH,HEIGHT);
+        renderer.setPixelRatio(WIDTH/HEIGHT);
+        renderer.setClearColor(0xeeeeee);
+        document.getElementById('canvas-frame').appendChild(renderer.domElement);
     }
-
-    function initCamera() {
-        camera = new THREE.PerspectiveCamera(45, window.innerWidth / window.innerHeight, 0.1, 1000);
-        camera.position.set(0, 100, 200);
-        camera.lookAt(new THREE.Vector3(0, 0, 0));
-    }
-
-    function initScene() {
+    //  创建场景
+    function initScene(){
         scene = new THREE.Scene();
     }
-
-    function initLight() {
-        ambientLight = new THREE.AmbientLight("#111111");
-        scene.add(ambientLight);
-
-        directionalLight = new THREE.DirectionalLight("#ffffff");
-        directionalLight.position.set(40, 60, 10);
-
-        directionalLight.shadow.camera.near = 10; //产生阴影的最近距离
-        directionalLight.shadow.camera.far = 400; //产生阴影的最远距离
-        directionalLight.shadow.camera.left = -70; //产生阴影距离位置的最左边位置
-        directionalLight.shadow.camera.right = 50; //最右边
-        directionalLight.shadow.camera.top = 50; //最上边
-        directionalLight.shadow.camera.bottom = -50; //最下面
-
-        //这两个值决定生成阴影密度 默认512
-        directionalLight.shadow.mapSize.height = 512;
-        directionalLight.shadow.mapSize.width = 512;
-
-        //告诉平行光需要开启阴影投射
-        directionalLight.castShadow = true;
-
-        scene.add(directionalLight);
+    //  创建相机
+    function initCamera(){
+        camera = new THREE.PerspectiveCamera(50,WIDTH/HEIGHT,1,10000);
+        camera.position.set(0,300,350);
+        camera.lookAt(0,0,0);
+        //  创建控制器
+        controls = new THREE.OrbitControls( camera );
+    }
+    //  创建灯光
+    function initLight(){
+        //  环境光
+        var light = new THREE.AmbientLight( 0x404040 ); // soft white light
+        scene.add( light );
+        //  平行光
+        light = new THREE.DirectionalLight(0xffffff);
+        scene.add(light);
     }
 
-    function initModel() {
+    function initObject(){
 
-        //底部平面
-        var planeGeometry = new THREE.PlaneGeometry(100, 100);
-        var planeMaterial = new THREE.MeshLambertMaterial({color: 0xaaaaaa, side: THREE.DoubleSide});
-        var plane = new THREE.Mesh(planeGeometry, planeMaterial);
-        plane.rotation.x = -0.5 * Math.PI;
-        plane.position.y = -.1;
-        plane.receiveShadow = true; //可以接收阴影
-        scene.add(plane);
+        // 地板
+        var mesh = new THREE.Mesh( new THREE.PlaneBufferGeometry( 2000, 2000 ), new THREE.MeshPhongMaterial( { color: 0xffffff, depthWrite: false } ) );
+        mesh.rotation.x = - Math.PI / 2;
+        mesh.receiveShadow = true;
+        scene.add( mesh );
 
-        //创建fbx加载器
+        //添加地板割线
+        var grid = new THREE.GridHelper( 2000, 20, 0x000000, 0x000000 );
+        grid.material.opacity = 0.2;
+        grid.material.transparent = true;
+        scene.add( grid );
+    }
+    //  加载模型并播放第一个动画
+    function initLoad(){
         var loader = new THREE.FBXLoader();
-        loader.load('xiaoxiongmao.fbx', function (fbx) {
-            fbx.scale.set(.1,.1,.1);
-            fbx.traverse(function (item) {
-               if(item instanceof THREE.Mesh){
-                   item.castShadow = true;
-                   item.receiveShadow = true;
-               }
-            });
-            scene.add(fbx);
+        loader.load("xiaoxiongmao.fbx", function (mesh) {
+            scene.add(mesh);
+            //  AnimationMixer 动画混合器是用于场景中特定对象的动画的播放器。当场景中的多个对象独立动画时，每个对象都可以使用同一个动画混合器。
+            mixer = new THREE.AnimationMixer( mesh );
+            console.log(mesh.animations.length);
+            for(var i = 0 ; i < mesh.animations.length; i++){
+                var action = mixer.clipAction( mesh.animations[ i ] );
+                action.stop();
+            }
+            //  clipAction 返回所传入的剪辑参数的AnimationAction, 根对象参数可选，默认值为混合器的默认根对象。
+            //  第一个参数可以是动画剪辑(AnimationClip)对象或者动画剪辑的名称。
+            mixer.clipAction( mesh.animations[ 0 ] ).play();
+
         });
-
     }
 
-    function initStats() {
-        stats = new Stats();
-        document.body.appendChild(stats.dom);
-    }
-
-    function initControl() {
-        control = new THREE.OrbitControls(camera, renderer.domElement);
-    }
-
-    function render() {
-
-        control.update();
-
-        renderer.render(scene, camera);
-    }
-
-    function onWindowResize() {
-
-        camera.aspect = window.innerWidth / window.innerHeight;
-        camera.updateProjectionMatrix();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-
-    }
-
-    function animate() {
-        //更新控制器
-        render();
-
-        //更新性能插件
-        stats.update();
-
-        requestAnimationFrame(animate);
-    }
-
-    function draw() {
-        initRender();
+    function initThree(){
+        initRenderer();
         initScene();
         initCamera();
         initLight();
-        initModel();
-        initStats();
+        initObject();
+        initLoad();
+        animation();
+    }
 
-        initControl();
+    function animation() {
+        requestAnimationFrame(animation);
+        renderer.render(scene, camera);
+        controls.update();
 
-        animate();
-        window.onresize = onWindowResize;
+        var time = clock.getDelta();
+        // update 推进混合器时间并更新动画
+        if (mixer) {
+
+            mixer.update(time);
+
+        }
     }
 </script>
 </html>
